# kreissaege

./: .gitignore  CMakeLists.txt  README.md
data/: _025_ws_lmsdata(alu+brett+hand).txt  _030cm_offen_LMSData.txt
lib/tinyptc/: ddraw.c  test.aps  test.ncb  test.opt  test.plg  tinyptc.h
lib/wmagic/: _WmlDistVec2Lin2.cpp  _WmlDistVec2Lin2.h  _WmlLine2.cpp  _WmlRay2.cpp  _WmlSegment2.cpp
src/: Bild.cpp  Bild.h  Bild2d.cpp  Bild2d.h  Filter.cpp  Filter.h  Grafik.cpp  Grafik.h  Lader.cpp  Lader.h  Sequenz.cpp  Sequenz.h  Speicher.cpp  Speicher.h  Tokenizer.h  global.h  main.cpp  text.cpp  text.h
